Adding all files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Nathan Brunetti</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,700" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark main-nav"> -->
+      <!-- YOU CAN ADD AN IMAGE OR A LOGO HERE -->
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        </div>
+      </div>
+    </nav> -->
+    <div class="container-fluid main">
+      <div class="intro">
+        <img src="images/instagram-photo.jpg" alt="" class="profile float-left" id="profile">
+        <h1>Hello... I'm Nate, I'm a web developer, UX/UI designer with a passion for combining data and design.</h1>
+      </div>
+    </div>
+    <div class="section1">
+      <div class="container">
+        <div class="row justify-content-around">
+          <div class="col-lg-5 feature">
+            <h2>SKILLS</h2>
+            <div class="feature-item">
+              <i id="icon" class="devicon-html5-plain"></i>
+              <p>HTML</p>
+            </div>
+            <div class="feature-item">
+              <i id="icon" class="devicon-css3-plain"></i>
+              <p>CSS3</p>
+            </div>
+            <div class="feature-item">
+              <i id="icon" class="devicon-javascript-plain"></i>
+              <p>JAVASCRIPT</p>
+            </div>
+            <div class="feature-item">
+              <i id="icon" class="devicon-bootstrap-plain"></i>
+              <p>BOOTSTRAP</p>
+            </div>
+            <div class="feature-item">
+              <i class="devicon-foundation-plain"></i>
+              <p>FOUNDATION</p>
+            </div>
+          </div>
+          <div class="col-lg-5 feature">
+            <h2>OTHER TOOLS</h2>
+            <div class="feature-item">
+              <i class="devicon-illustrator-plain"></i>
+              <p>ILLUSTRATOR</p>
+            </div>
+            <div class="feature-item">
+              <i class="devicon-photoshop-plain"></i>
+              <p>PHOTOSHOP</p>
+            </div>
+            <div class="feature-item">
+              <i class="devicon-wordpress-plain"></i>
+              <p>WORDPRESS</p>
+            </div>
+            <div class="feature-item">
+              <i class="devicon-trello-plain"></i>
+              <p>TRELLO</p>
+            </div>
+            <div class="feature-item">
+              <i class="devicon-github-plain"></i>
+              <p>GITHUB</p>
+            </div>
+            <br>
+            <div class="feature-item">
+              <p>INDESIGN</p>
+            </div>
+            <div class="feature-item">
+              <p>DREAMWEAVER</p>
+            </div>
+            <div class="feature-item">
+              <p>SUBLIME</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  </body>
+</html>
