updating some styles

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     </nav> -->
     <div class="container-fluid main">
       <div class="intro">
-        <img src="images/instagram-photo.jpg" alt="" class="profile float-left" id="profile">
-        <h1>Hello... I'm Nate, I'm a web developer, UX/UI designer with a passion for combining data and design.</h1>
+        <div class="img-container float-left">
+          <div class="item">
+            <img src="images/instagram-photo.jpg" alt="" class="profile" id="profile">
+          </div>
+        </div>
+        <h1>Hello... I'm Nathan, A front end developer that loves using code and data to create solutions.<br><br>I am an accomplished web development professional with extensive experience providing leadership and direction needed to achieve key organizational web development-related goals and objectives.</h1>
       </div>
     </div>
     <div class="section1">
